# ASEP

./: .env.example  .gitignore  .pre-commit-config.yaml  ALEMBIC_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  docker-compose.test.yml  docker-compose.yml
backend/: .env.example  .gitignore  ALEMBIC_REQUIREMENTS_CHECKLIST.md  ALEMBIC_SETUP_SUMMARY.md  Dockerfile  README.md  alembic.ini  control_plane_test.py  generate_migration.sh  governance_test.py  multi_agent_test.py  production_test.py  pyproject.toml  reflection_test.py  verify_settings.py
backend/alembic/: env.py
backend/alembic/versions/: 04e17ad65a8b_add_user_fields.py  2802f86835b1_initial_empty_migration.py  751be1fd11a4_add_user_model.py  9bbb2aa58d0e_initial_schema.py  daab246a259f_add_role_to_user.py
backend/src/: __init__.py  main.py
backend/src/agent/: __init__.py  agent.py  context_builder.py  events.py  health.py  orchestrator.py  reasoning.py  session.py  state.py
backend/src/agents/: __init__.py  checkpoint.py  planner.py  registry.py  state.py  supervisor.py
backend/src/ai_runtime/: circuit_breaker.py  context.py  contracts.py  registry.py  service.py
backend/src/api/: __init__.py  app.py  dependencies.py  exceptions.py
backend/src/auth/: __init__.py  decorators.py  dependencies.py  jwt.py  password.py  permissions.py  policies.py  rate_limit.py  roles.py  schemas.py  service.py  turnstile.py
backend/src/cache/: __init__.py  cache.py  health.py  locks.py  redis.py
backend/src/config/: __init__.py  settings.py
backend/src/control_plane/: __init__.py  agents.py  approvals.py  audit.py  control_api.py  dashboard.py  health.py  metrics.py  policies.py  sessions.py  traces.py
backend/src/db/: __init__.py  neo4j.py  postgres.py  qdrant.py  redis.py
backend/src/documents/: __init__.py  chunking.py  context_builder.py  embedding_service.py  evaluation.py  health.py  ingestion.py  loaders.py  metadata.py  retrieval.py
backend/src/evaluation/: __init__.py  datasets.py  evaluator.py  health.py  metrics.py  registry.py  reports.py  scoring.py  tracing.py  trajectory.py
backend/src/executor/: __init__.py  context.py  dispatcher.py  executor.py  health.py  result.py  retries.py  scheduler.py  worker.py
backend/src/governance/: __init__.py  approval.py  audit.py  decision.py  enforcement.py  guardrails.py  health.py  hitl.py  intent.py  policy_engine.py  runtime_authorization.py  service.py
backend/src/graph/: __init__.py  graph_service.py  health.py  models.py  neo4j.py  queries.py
backend/src/knowledge/: __init__.py  service.py  sources.py  sync.py
backend/src/memory/: __init__.py  consolidation.py  episodic.py  health.py  memory_manager.py  procedural.py  retrieval.py  semantic.py  service.py  working.py
backend/src/multi_agent/: __init__.py  base_agent.py  contracts.py  coordination.py  engine.py  evaluator_agent.py  executor_agent.py  governance_agent.py  handoff.py  health.py  knowledge_agent.py  memory_agent.py  messaging.py  planner_agent.py  reflection_agent.py  registry.py  research_agent.py  router.py  supervisor.py
backend/src/planner/: __init__.py  decomposition.py  goals.py  health.py  models.py  plan.py  planner.py  prompts.py  provider.py  validator.py
backend/src/production/: __init__.py  benchmarking.py  compatibility.py  diagnostics.py  health.py  integration.py  load_testing.py  recovery.py  resilience.py  versioning.py
backend/src/reflection/: __init__.py  generator.py  health.py  memory_writer.py  models.py  policies.py  reflector.py
backend/src/replay/: __init__.py
backend/src/repositories/: __init__.py  agent_run.py  audit_log.py  base.py  knowledge_document.py  memory_entry.py  task.py  user.py
backend/tests/: __init__.py  conftest.py
benchmarks/: __init__.py
(+239 files in other folders)
