[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asep-backend"
version = "0.1.0"
description = "ASEP — Autonomous Software Engineering Platform Backend"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",

    # Async database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.3.4",

    # Data validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # Caching / messaging
    "redis[asyncio]>=5.2.0",

    # Vector database
    "qdrant-client[async]>=1.12.0",

    # Graph database
    "neo4j>=5.27.0",

    # LangGraph / LangChain
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",

    # Observability
    "structlog>=24.4.0",
    "python-json-logger>=3.2.0",

    # Utilities
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.12",
    "tenacity>=9.0.0",
    "orjson>=3.10.0",

    # Authentication
    "PyJWT>=2.8.0",
    "passlib[argon2]>=1.7.4",
    "argon2-cffi>=23.1.0",
    "redis[hiredis]>=5.2.0",
    "neo4j>=5.14.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",

    # Linting / formatting
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",

    # Type stubs
    "types-redis>=4.6.0",

    # Pre-commit
    "pre-commit>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

# =============================================================================
# Black
# =============================================================================
[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs | \.git | \.hg | \.mypy_cache | \.tox | \.venv
    | _build | buck-out | build | dist | migrations
)/
'''

# =============================================================================
# Ruff
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function calls in default arguments (FastAPI dependency injection)
]
exclude = [
    ".git", ".hg", ".mypy_cache", ".tox", ".venv",
    "_build", "buck-out", "build", "dist", "migrations",
]

[tool.ruff.isort]
known-first-party = ["src"]

# =============================================================================
# MyPy
# =============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["migrations/", "tests/"]

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "migrations/*"]
